fix: test for java 8 path.of